--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,16 @@ apply plugin: 'org.springframework.boot'
 
 dependencies {
     def springBootVersion = '1.5.4.RELEASE'
+    def awsSDKVersion = '1.11.151'
+
 
     compile group: "org.springframework.boot", name: "spring-boot-starter", version: springBootVersion
     compile group: "org.springframework.boot", name: "spring-boot-starter-web", version: springBootVersion
     compile group: "org.springframework.boot", name: "spring-boot-starter-actuator", version: springBootVersion
+
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-core', version: awsSDKVersion
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: awsSDKVersion
+    compile group: 'com.google.guava', name: 'guava', version: '19.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
